tests/baselines/reference/parserArrowFunctionExpression1.errors.txt
==== tests/cases/compiler/parserArrowFunctionExpression1.ts (1 errors) ====
    var v = (public x: string) => { };
             ~~~~~~
!!! parserArrowFunctionExpression1.ts(1,10): error TS2246: A parameter property is only allowed in a constructor implementation.